fix: OPTIC-1107: [timebox] visual inconsistency with datamanager on smaller screens

--- a/web/apps/labelstudio/src/app/App.scss
+++ b/web/apps/labelstudio/src/app/App.scss
@@ -9,6 +9,11 @@ body {
 
   margin: 0;
   font-family: Figtree, sans-serif;
+  display: flex;
+}
+
+:global(.app-wrapper) {
+  flex: 1;
 }
 
 .app-wrapper {
